src/public/styles/index.scss
@import url("https://fonts.googleapis.com/css2?family=Supermercado+One&display=swap");

body {
  margin: 0;
  padding: 0;
  font-family: "Supermercado One", cursive;
  background: linear-gradient(120deg, gray, white);
  height: 100vh;
  overflow: hidden;
}

.main__form {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 400px;
  background-color: darkcyan;
  border-radius: 10px;
  h1 {
    text-align: center;
    padding: 0 0 20px 0;
    color: goldenrod;
    border-bottom: 1px solid silver;
  }
  form {
    padding: 0 40px;
    box-sizing: border-box;
    .txt_field {
      position: relative;
      border-bottom: 2px solid silver;
      margin: 30px 0;
      input {
        width: 100%;
        padding: 0 5px;
        height: 40px;
        font-size: 16px;
        border: none;
        background: none;
        outline: none;
      }
      label {
        position: absolute;
        top: 50%;
        left: 5px;
        color: silver;
        transform: translateY(-50%);
        font-size: 16px;
        pointer-events: none;
        transition: 0.5s;
      }
      span::before {
        content: "";
        position: absolute;
        top: 40px;
        left: 0;
        width: 0%;
        height: 2px;
        background: white;
        transition: 0.5s;
      }
    }
  }
}



.txt_field input:focus ~ label,
.txt_field input:valid ~ label {
  top: -5px;
  color: white;
}

.txt_field input:focus ~ span::before,
.txt_field input:valid ~ span::before {
  width: 100%;
}

input[type="submit"] {
  width: 100%;
  height: 50px;
  border: 1px solid;
  background-color: goldenrod;
  font-size: 18px;
  color: white;
  font-weight: 700;
  cursor: pointer;
  outline: none;
  &:hover {
    border-color: goldenrod;
    transition: 0.5s;
  }
}

.view__product {
  margin: 30px 0;
  text-align: center;
  font-size: 16px;
  color: black;
  a {
    color: blue;
    text-decoration: none;
    &:hover {
      text-decoration: underline;
    }
  }
}


// PRODUCTS

.product__container {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  background-color: darkcyan;
}

.box {
  flex: 1 1 300px;
  background-color: white;
  border: 1px solid black;
  position: relative;
  overflow: hidden;
  margin: 20px;
  .image {
    padding: 10px;
    background-color: lightgray;
    text-align: center;
    img {
      height: 200px;
      width: 250px;
      object-fit: cover;
      filter: drop-shadow(0 3px 5px black);
    }
  }
  .info {
    .title {
      padding: 10px;
      color: lightgray;
      font-size: 20px;
    }
    .sub__info {
      display: flex;
      align-items: center;
      justify-content: space-between;
      padding: 15px 10px;
      .price {
        color: orangered;
        font-size: 20px;
      }
    }
  }
}

